Curriculo e atualização topicos

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body{
-  background-color: rgb(218, 218, 218);
+  background-color: rgb(234, 234, 234);
 }
 
 .meu-nome{
@@ -17,22 +17,34 @@ body{
 }
 
 .topicos ul {
-    list-style: none; /*TIRAS AS BOLINHAS DAS LISTAS*/
-    padding: 10;
-    display: flex; /* UM DO LADO DO OUTRO */
-    gap: 20%; /* ESPAÇAR OS TOPICOS*/
+    display: flex;
+    gap: 20rem;
     justify-content: center;
-  }
-  
-.topicos a {
-    color: green; 
-    text-decoration: none; /*SEM SUBLINHADO*/
-    font-size: 25px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
   }
 
-  .topicos a:hover {
-    color: #ea00ff; /* MUDAR A COR*/
-  }
+.topicos ul li{
+  transform: scale(1);
+  transition: transform 0.5s ease, color 0.5s ease;
+}
+  
+.topicos ul li a{
+  font-weight: bold;
+  font-size: 1.6rem ;
+  text-decoration: none;
+  color: green;
+  transition: color 0.5s ease, transform 0.5s ease;
+}
+
+.topicos ul li:hover{
+  transform: scale(1.8);
+}
+
+.topicos ul li a:hover{
+  color: #be0078;
+}  
   
   .sobre-mim{
     display: flex;
@@ -66,7 +78,7 @@ body{
   
   /* Modo escuro ativado */
   body.dark-mode {
-    background-color: #121212;
+    background-color: #595959;
     color: #ffffff;
   }
   
@@ -75,10 +87,36 @@ body{
     color: #90ee90;
   }
   
-  body.dark-mode .projeto {
-    background-color: #1e1e1e;
-    border-color: #333;
-  }
+.btn{
+  background-color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #000;
+  letter-spacing: 0.5px;
+  padding:10px 20px;
+  border-radius: 5000px;
+  transition: all 0.3s;
+}
+
+.btn:hover{
+  transform: scale(1.15);
+}
+
+.btn--dowload{
+  padding: 16px 32px;
+  font-size: 16px;
+  position: fixed;
+  bottom: 27px;
+  left: calc(50% - 96px);
+  z-index: 100;
+  box-shadow: 0 6px 23px rgba(0, 0, 0, 0.45);
+  animation: fade-up 0.5s 0.4s backwards;
+}
+
+
+
+  
 
   
 
